[gd_scene load_steps=10 format=3 uid="uid://dc8411dbc438i"]

[ext_resource type="Script" path="res://scripts/dialog_controller.gd" id="1_na6wk"]
[ext_resource type="Texture2D" uid="uid://xmsol1js8q03" path="res://art/Textures/Sign2.png" id="2_2r2kf"]
[ext_resource type="Texture2D" uid="uid://dlrm8ei2o4ten" path="res://art/Textures/Sign1.png" id="2_k2ty2"]
[ext_resource type="Texture2D" uid="uid://cv43aty3neyp3" path="res://art/Textures/Sign1on.png" id="3_i0uoe"]
[ext_resource type="Texture2D" uid="uid://ccqa3k6i7ic7o" path="res://art/Textures/Sign2on.png" id="3_pum1e"]

[sub_resource type="FontFile" id="FontFile_bx7qq"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_i6pg1"]
line_spacing = 5.0
font = SubResource("FontFile_bx7qq")
font_size = 36
font_color = Color(0, 0, 0, 1)
outline_size = 10
outline_color = Color(0.996078, 0.996078, 0.996078, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 6.18)

[sub_resource type="LabelSettings" id="LabelSettings_wluyb"]
font_size = 38
font_color = Color(0.415686, 0.415686, 0.415686, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.615686)
shadow_offset = Vector2(1, 5.52)

[sub_resource type="LabelSettings" id="LabelSettings_t43pe"]
font_size = 36
font_color = Color(1, 0.592157, 0.419608, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.858824, 0.439216, 0.0705882, 0.803922)
shadow_offset = Vector2(1, 2.5)

[node name="Dialog" type="CanvasLayer" node_paths=PackedStringArray("stagelight_applause", "stagelight_attack")]
script = ExtResource("1_na6wk")
stagelight_applause = NodePath("ButtonApplause/On")
stagelight_attack = NodePath("ButtonAttack/atkOn")

[node name="ButtonHolder" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.494118)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -581.0
offset_top = -330.0
offset_right = 587.0
offset_bottom = 333.0
grow_horizontal = 2
grow_vertical = 2

[node name="FirstButton" type="Button" parent="ButtonHolder"]
layout_mode = 0
offset_left = 132.0
offset_top = 266.0
offset_right = 541.0
offset_bottom = 420.0
metadata/_edit_group_ = true

[node name="ButtonText" type="Label" parent="ButtonHolder/FirstButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -78.5
offset_right = 246.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Good option
"
label_settings = SubResource("LabelSettings_i6pg1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SecondButton" type="Button" parent="ButtonHolder"]
layout_mode = 0
offset_left = 575.0
offset_top = 265.0
offset_right = 984.0
offset_bottom = 419.0
metadata/_edit_group_ = true

[node name="ButtonText" type="Label" parent="ButtonHolder/SecondButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -78.5
offset_right = 246.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Bad option
"
label_settings = SubResource("LabelSettings_i6pg1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ThirdButton" type="Button" parent="ButtonHolder"]
offset_left = 575.0
offset_top = 441.0
offset_right = 984.0
offset_bottom = 595.0
metadata/_edit_group_ = true

[node name="ButtonText" type="Label" parent="ButtonHolder/ThirdButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -78.5
offset_right = 246.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Good option
"
label_settings = SubResource("LabelSettings_i6pg1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FourthButton" type="Button" parent="ButtonHolder"]
offset_left = 132.0
offset_top = 441.0
offset_right = 541.0
offset_bottom = 595.0
metadata/_edit_group_ = true

[node name="ButtonText" type="Label" parent="ButtonHolder/FourthButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -78.5
offset_right = 246.5
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
text = "Good option
"
label_settings = SubResource("LabelSettings_i6pg1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="ButtonApplause" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -5.0
offset_right = 266.667
offset_bottom = 145.0
grow_horizontal = 2
texture = ExtResource("2_k2ty2")
expand_mode = 3

[node name="On" type="TextureRect" parent="ButtonApplause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.333
offset_top = -75.0
offset_right = 133.333
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_i0uoe")
expand_mode = 3

[node name="ButtonAttack" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -267.0
offset_top = -6.0
offset_right = -0.333374
offset_bottom = 144.0
grow_horizontal = 2
texture = ExtResource("2_2r2kf")
expand_mode = 3

[node name="atkOn" type="TextureRect" parent="ButtonAttack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.333
offset_top = -75.0
offset_right = 133.333
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pum1e")
expand_mode = 3
stretch_mode = 4

[node name="ComedyLevel" type="ProgressBar" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -333.0
offset_top = 12.0
offset_right = 335.0
offset_bottom = 39.0
grow_horizontal = 2

[node name="Label" type="Label" parent="ComedyLevel"]
layout_mode = 0
offset_left = 289.0
offset_top = 43.0
offset_right = 390.0
offset_bottom = 66.0
text = "comedy level"
vertical_alignment = 1
autowrap_mode = 2

[node name="JokeSetup" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -224.0
offset_right = 324.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_wluyb")
vertical_alignment = 1
autowrap_mode = 2

[node name="JokePunchline" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -24.0
offset_right = 324.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_t43pe")
vertical_alignment = 1
autowrap_mode = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
